# cmake-examples

./: README.md
External_ROOT/: CMakeLists.txt  main.cc
External_ROOT_FastJet/: CMakeLists.txt  README  README.md
LibraryAndExecutable/: CMakeLists.txt  hello.cc  hello.h  load_hello_in_root.py  main.cc
SimpleExecutable/: CMakeLists.txt  main.cc
SourceOrganized/: CMakeLists.txt  main.cc
SourceOrganized/src/: CMakeLists.txt  hello.cc
